# chessis

./: .clang-format  .gitignore  CMakeLists.txt  TODO.txt  ch.pro  chess.pro  chess.pro.user.a138991  chess.pro.user.e6e3149  res.qrc
UDP_server/: UDP_server.pro  UDP_server.pro.user.e6e3149  main.cpp  udp_server.cpp  udp_server.h
UDP_server/cpp/: chess.cpp  chess.h  coord.h  desk.cpp  desk.h  enums.h  main.cpp  messages.h  server.cpp  server.h  server_user.cpp  server_user.h  udp_server.cpp  udp_server.h  user.cpp  user.h
UDP_server/headers/: chess.h  desk.h  enums.h  udp_server.h
UDP_server/src/: chess.cpp  main.cpp  udp_server.cpp
build-UDP_server-Desktop_Qt_5_5_1_GCC_64bit-Debug/: Makefile  UDP_server  moc_udp_server.cpp
cpp/: board_graphic.cpp  board_graphic.h  coord.h  cube_renderer.cpp  cube_renderer.h  enums.h  exporter.cpp  exporter.h  fb_obj.cpp  fb_obj.h  main.cpp  my_socket.cpp  udp_socket.cpp  udp_socket.h
headers/: board_graphic.h  chess.h  cube_renderer.h  enums.h  exporter.h  fb_obj.h  integration.h  udp.h  udp_client.h  udp_socet.h  udp_socket.h
hooks/: pre-commit
messages/: CMakeLists.txt
messages/include/messages/: messages.hpp  messages_eq.hpp  messages_io.hpp
res/: BoardInit.qml  CellHighlight.qml  CommandField.qml  ConnectionStatus.qml  Enter_login.qml  Figure.qml  FigureDelegate.qml  FigureModel.qml  Menu.qml  MenuLayout.qml  MoveOutput.qml  MoveTurn.qml  StartModel.qml  Thumbs.db  app.qml
res/img/: Thumbs.db
server/: CMakeLists.txt  UDP_server.pro  server.pro
server/cpp/: chess.cpp  chess.h  client.cpp  client.h  coord.h  desk.cpp  desk.h  handle_message.cpp  handle_message.h  helper.h  log.h  main.cpp  messages.cpp  messages.h  server.cpp  server.h  server_user.cpp  server_user.h  typelist.h  udp_server.h  user.cpp  user.h
server/src/: chess.cpp  chess.h  client.cpp  client.h  coord.h  desk.cpp  desk.h  handle_message.cpp  handle_message.h  helper.h  logger.cpp  logger.hpp  main.cpp  messages.h  server.cpp  server.h
server/src/common/: helper.hpp  logger.cpp  logger.hpp  unique_id_generator.cpp  unique_id_generator.hpp
server/src/logic/: board_logic.cpp  board_logic.hpp  boards_holder.cpp  boards_holder.hpp  chess.cpp  chess.hpp  coord.hpp  credentials.cpp  credentials.hpp  desk.cpp  desk.hpp  games_manager.cpp  games_manager.hpp  message_handler.cpp  message_handler.hpp  player.cpp  player.hpp  players_holder.cpp  players_holder.hpp
server/src/server/: base_client.cpp  base_client.hpp  client.cpp  client.hpp  clients_holder.cpp  clients_holder.hpp  datagram.hpp  handle_message.cpp  handle_message.hpp  server.cpp  server.hpp
server/src/server/authentication/: client.cpp  client.hpp  message_handler.cpp  message_handler.hpp  server.cpp  server.hpp
server/src/server/logic/: base_client.cpp  base_client.hpp  client.cpp  client.hpp  clients_holder.cpp  clients_holder.hpp  server.cpp  server.hpp
server/src/user/: credentials.cpp  credentials.hpp  session_token_generator.hpp  user_data.cpp  user_data.hpp  user_status_monitor.cpp  user_status_monitor.hpp  users_data_manager.cpp  users_data_manager.hpp
server/src/user_data/: credentials.cpp  credentials.hpp  session_token_generator.hpp  user_data.cpp  user_data.hpp  users_data_manager.cpp  users_data_manager.hpp
src/: board_graphic.cpp  chess.cpp  cube_renderer.cpp  exporter.cpp  fb_obj.cpp  integration.cpp  integration.cpp.autosave  main.cpp  udp_client.cpp  udp_client.cpp.autosave  udp_socet.cpp  udp_socket.cpp
user/: CMakeLists.txt  res.qrc  user.pro
user/cpp/: board_graphic.cpp  board_graphic.h  client.cpp  client.h  cube_renderer.cpp  cube_renderer.h  enums.h  fb_obj.cpp  fb_obj.h  figure.h  handle_message.h  helper.h  log.h  main.cpp  messages.cpp  messages.h  my_socket.cpp  my_socket.h
user/res/: Board.qml  BoardLayout.qml  CommandField.qml  ConnectionStatus.qml  Constants.qml  Figure.qml  LoginInput.qml  Login_input.qml  MenuLayout.qml  MoveOutput.qml  MoveTurn.qml  app.qml
user/res/board/: Board.qml  BoardLayout.qml  BoardWithFigures.qml  Figure.qml
user/res/login/: LoginInput.qml  TextInputBox.qml
user/res/menu_layout/: CommandField.qml  ConnectionStatus.qml  MenuLayout.qml  MoveTurn.qml
user/src/: board_graphic.cpp  board_graphic.h  client.cpp  client.h  coord.h  cube_renderer.cpp  cube_renderer.h  fb_obj.cpp  fb_obj.h  figure.h  handle_message.h  helper.cpp  helper.h  logger.cpp  logger.hpp  main.cpp  messages.h
user/src/client/: client.cpp  client.h  client_controller.cpp  client_controller.hpp  connection_strategy.cpp  connection_strategy.hpp  handle_message.h  messages.h  socket.cpp  socket.hpp
user/src/controller/: app.cpp  app.hpp  board.cpp  board.hpp  board_graphic.cpp  board_graphic.h  board_graphic.hpp  figures_model.cpp  figures_model.hpp  handle_message.hpp  login_input.cpp  login_input.hpp  menu_layout.cpp  menu_layout.hpp  message_processor.cpp  message_processor.hpp
user/src/message_handler/: handle_message.hpp  handler.cpp  handler.hpp  helper.hpp
